# training_2024_2025

./: LICENSE  README.md
Practice-axum/: README.md
Practice-axum/basic/: Cargo.toml
Practice-axum/lazy_static/: Cargo.toml
Practice-axum/usertest/: Cargo.toml  log.txt
Practice-axum/usertest/src/: lib.rs  main.rs
Practice-axum/usertest/src/handlers/: functionality.rs  mod.rs  register.rs
Practice-axum/usertest/src/middleware/: auth.rs  idheader.rs  log.rs  mod.rs
Practice-axum/usertest/src/routes/: csrf.rs  ssrf.rs
Rust-Rangers/Madhav-rust/: Cargo.toml  README.md
Rust-Rangers/threadprac/: Cargo.toml
Task1/: test.html
circle_area_app/: README.md  cucumber.js  generateReport.js  package-lock.json  package.json  playwright.config.js  server.js
circle_area_app/features/: circle.feature
circle_area_app/public/: README.md  index.html  script.js  styles.css
circle_area_app/reports/: cucumber_report.html  cucumber_report.json
circle_area_app/test-results/: .last-run.json
circle_area_app/tests/: README.md  playwright.test.js
flowcharts/: Areaofcircle.js  Parameterofrectangle.js  README.md  factorialofn.js  factorialseries.js  factotrialseries1.js  maxamongX&Y&Z.js  maxamongX&Y.js  print1to5.js  series.js  series2.js  series3.js  sinxseries.js  sumof1to5.js
html_css/: README.md
js/: README.md
js/Task 1/: README.md  (+3 more)
polars/: Cargo.toml  electronic-card-transactions-january-2025-csv-tables.csv  output.csv
test_middleware-api-rust/: README.md
test_middleware-api-rust/test_api2/: Cargo.toml
test_middleware-api-rust/test_api2/src/: main.rs
(+59 files in other folders)
