[package]
name = "usertest"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
tikv-client = "0.3.0"
uuid = { version = "1.13.1", features = ["v4"] }
sqlx={ version="0.8.3", features=["mysql", "runtime-tokio", "macros"]}
hyper = "1.6.0"
tower = "0.5.2"
tokio-util = "0.7.13"
chrono="0.4.19"





