[package]
name = "test_api2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] } # ✅ Updated for Hyper 1.0+
